...
                                                                    0.0),
                                                        child: Container(
                                                          width:
                                                              double.infinity,
                                                          child: TextFormField(
                                                            key: ValueKey(
                                                                'signupEmail_q4yt'),
                                                            controller: _model
                                                                .signupEmailTextController,
                                                            focusNode: _model
                                                                .signupEmailFocusNode,
                                                            onChanged: (_) =>
                                                                EasyDebounce
...
                                                        ),
                                                      ),
                                                      Container(
                                                        width: double.infinity,
                                                        child: TextFormField(
                                                          key: ValueKey(
                                                              'signupPassword_yvhx'),
                                                          controller: _model
                                                              .signupPasswordTextController,
                                                          focusNode: _model
                                                              .signupPasswordFocusNode,
                                                          autofocus: false,
                                                          enabled: true,
...
                                                        ),
                                                      ),
                                                      Container(
                                                        width: double.infinity,
                                                        child: TextFormField(
                                                          key: ValueKey(
                                                              'signupConfirmPassword_629x'),
                                                          controller: _model
                                                              .signupConfirmPasswordTextController,
                                                          focusNode: _model
                                                              .signupConfirmPasswordFocusNode,
                                                          autofocus: false,
                                                          enabled: true,
...
                                                Padding(
                                                  padding: EdgeInsetsDirectional
                                                      .fromSTEB(
                                                          0.0, 26.0, 0.0, 0.0),
                                                  child: FFButtonWidget(
                                                    key: ValueKey(
                                                        'signupButton_fxns'),
                                                    onPressed: () async {
                                                      logFirebaseEvent(
                                                          'LOGIN_PAGE_signupButton_ON_TAP');
                                                      logFirebaseEvent(
                                                          'signupButton_validate_form');
                                                      if (_model.formKey1
...
