...
                                      child: Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 6.0, 0.0, 6.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('syllabus_8a3y'),
                                            controller:
                                                _model.syllabusTextController,
                                            focusNode: _model.syllabusFocusNode,
                                            autofocus: false,
                                            enabled: true,
                                            obscureText: false,
...
                              ),
                            ),
                          ].divide(SizedBox(height: 0.0)),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('confirm_upmw'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'UPLOAD_SCHEDULE_PAGE_confirm_ON_TAP');
                          logFirebaseEvent('confirm_backend_call');
                          _model.apiResult0ge =
                              await GenerateStudyPlanCall.call(
...
